axelor-web/src/main/webapp/css/main.css
/* ... */
.record-pager-change {
	margin-right: 4px;
}

.record-pager-change button {
	height: auto !important;
	margin-top: 5px !important;
}

.record-pager-change input {
	margin-top: 5px;
	height: 20px;
}

.stackbar {
}

.stackbar .navbar,
.stackbar .navbar * {
	color: #333;
}

.stackbar .navbar .navbar-inner {
	min-height: 26px;
	padding-left: 10px;
	padding-right: 10px;
}

.stackbar .navbar .navbar-inner .brand {
	font-size: small;
	font-weight: bold;
	padding: 4px 8px;
	margin: 0;
	margin-left: -10px;
}

.stackbar .navbar .navbar-inner .container-fluid {
	min-width: 100px;
	padding: 0;
}

.stackbar .navbar {
	margin-bottom: 0px;
}

.stackbar .navbar,
.stackbar .navbar .navbar-inner {
	border-bottom-left-radius: 0px;
	border-bottom-right-radius: 0px;
	box-shadow: none;
}

.html-view,
.iframe-container,
.iframe-container > iframe {
	-webkit-box-sizing: border-box;
   	   -moz-box-sizing: border-box;
        	box-sizing: border-box;
}

.html-view > .iframe-container {
	position: absolute;
	top: 4px; bottom: 4px; left: 4px; right: 4px;	
}

.iframe-container > iframe {
	position: absolute;
	width: 100%;
	height: 100%;
}

.search-view {

}

.search-view form {
	margin: 0 0 8px;
}

.search-view .search-view-form,
.search-view .search-view-toolbar {
	margin: 4px;
}

.search-view .search-view-toolbar table.form-layout {
	width: inherit;
}

.search-view .search-view-grid {
	position: relative;
	overflow: hidden;	
}

.search-view .search-view-grid .slickgrid {
	position: absolute;
	top: 0; left: 0; right: 0; bottom: 0;
	border: none;
}

.unselectable-text {
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
}

img.prefix-icon {
	margin-right: 4px;
}

.fa, [class^=fa-] {
	font-size: 14px;
}

.user-preferences-body {
	width: 400px;
	margin: auto;
}

.user-preferences-header {
	text-align: center;
}

.btn-toolbar .nav {
	font-size: 13px !important;
	margin-bottom: 0;
}

.record-toolbar .menu-bar {
	display: inline-block;
	float: inherit;
	vertical-align: middle;
	white-space: nowrap;
}

.record-toolbar .button-menu a.btn {
	padding: 4px 8px 4px;
	margin-top: 4px;
	color: #333;
}

.record-toolbar .button-menu a.btn:hover,
.record-toolbar .button-menu a.btn:focus {
	background: #eeeeee;
}

.record-toolbar .menu-bar a.disabled {
	color: #ccc;
	cursor: default;
}

.record-toolbar .menu-bar a.disabled:hover,
.record-toolbar .menu-bar a.disabled:focus {
	background-color: inherit;
	background-image: inherit;
}

.nvtooltip {
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;;
	font-size: inherit;
}

.nvtooltip h3 {
	font-size: 13px;
	font-weight: bold;
}

